; ModuleID = '/home/carl/AnghaBench/xLua/build/luasocket/extr_udp.c_udp_create.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luasocket/extr_udp.c_udp_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@SOCK_DGRAM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"udp{unconnected}\00", align 1
@PF_INET6 = common dso_local global i32 0, align 4
@IPPROTO_IPV6 = common dso_local global i32 0, align 4
@IPV6_V6ONLY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @udp_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @udp_create(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca %struct.TYPE_2__*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @SOCK_DGRAM, align 4
  %12 = call i8* @inet_trycreate(i32* %6, i32 %10, i32 %11)
  store i8* %12, i8** %7, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %42, label %15

15:                                               ; preds = %2
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @lua_newuserdata(i32* %16, i32 4)
  %18 = sext i32 %17 to i64
  %19 = inttoptr i64 %18 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %19, %struct.TYPE_2__** %8, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @auxiliar_setclass(i32* %20, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 -1)
  %22 = call i32 @socket_setnonblocking(i32* %6)
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* @PF_INET6, align 4
  %25 = icmp eq i32 %23, %24
  br i1 %25, label %26, label %32

26:                                               ; preds = %15
  store i32 1, i32* %9, align 4
  %27 = load i32, i32* %6, align 4
  %28 = load i32, i32* @IPPROTO_IPV6, align 4
  %29 = load i32, i32* @IPV6_V6ONLY, align 4
  %30 = bitcast i32* %9 to i8*
  %31 = call i32 @setsockopt(i32 %27, i32 %28, i32 %29, i8* %30, i32 4)
  br label %32

32:                                               ; preds = %26, %15
  %33 = load i32, i32* %6, align 4
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 2
  store i32 %33, i32* %35, align 4
  %36 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 1
  %38 = call i32 @timeout_init(i32* %37, i32 -1, i32 -1)
  %39 = load i32, i32* %5, align 4
  %40 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %41 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %40, i32 0, i32 0
  store i32 %39, i32* %41, align 4
  store i32 1, i32* %3, align 4
  br label %48

42:                                               ; preds = %2
  %43 = load i32*, i32** %4, align 8
  %44 = call i32 @lua_pushnil(i32* %43)
  %45 = load i32*, i32** %4, align 8
  %46 = load i8*, i8** %7, align 8
  %47 = call i32 @lua_pushstring(i32* %45, i8* %46)
  store i32 2, i32* %3, align 4
  br label %48

48:                                               ; preds = %42, %32
  %49 = load i32, i32* %3, align 4
  ret i32 %49
}

declare dso_local i8* @inet_trycreate(i32*, i32, i32) #1

declare dso_local i32 @lua_newuserdata(i32*, i32) #1

declare dso_local i32 @auxiliar_setclass(i32*, i8*, i32) #1

declare dso_local i32 @socket_setnonblocking(i32*) #1

declare dso_local i32 @setsockopt(i32, i32, i32, i8*, i32) #1

declare dso_local i32 @timeout_init(i32*, i32, i32) #1

declare dso_local i32 @lua_pushnil(i32*) #1

declare dso_local i32 @lua_pushstring(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
